Changes to index page

--- a/BNS_Final/appsettings.json
+++ b/BNS_Final/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BNS_FinalContext": "Server=(localdb)\\mssqllocaldb;Database=BNS_FinalContext-d44acf56-495c-4b12-a3f8-fa022ba5b8ba;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BNS_FinalContext": "Server=(localdb)\\mssqllocaldb;Database=BNS_Final;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
