Made additional edits to the elanding page

--- a/BNS_Final/BNS_Final.csproj
+++ b/BNS_Final/BNS_Final.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <Content Remove="wwwroot\css\Landing.css" />
+    <Content Remove="wwwroot\images\Login.png" />
+    <Content Remove="wwwroot\images\Scotia.jpg" />
   </ItemGroup>
 
   <ItemGroup>
